# shomer_target

./: CMakeLists.txt  README.md
include/ShomerLib/: ShomerCeres.hpp  ShomerCore.hpp  ShomerEngine.hpp  ShomerHelper.hpp  ShomerJacobians.hpp  ShomerTypes.hpp  ShomerUtils.hpp
jacobians_notebook/: Shomer_Target_Manifolds_SO3xT3.ipynb
src/: ShomerCore.cpp  ShomerEngine.cpp  ShomerHelper.cpp
